chore: address IntelliJ inspection warnings repo-wide (comprehensive sweep) (#161)
* chore: address IntelliJ inspection warnings repo-wide (comprehensive sweep)

Driven by a multi-agent IntelliJ MCP scan over every kpipe module
(lib/* × 12, examples/* × 7, benchmarks-jmh). The scan found 398
findings across the 20 modules; this PR lands the 46 mechanical
fixes that are safe to apply without per-site judgment. The
remaining 352 findings are deliberately deferred — they fall into
known-judgment categories (intentional unused-parameter in test
lambdas, public-facade unused-methods per docs/escape-hatches.md,
busy-wait in shutdown drain, etc.).

## Fix categories applied (46 total)

- redundant-type-argument / explicit-type-args-redundant — switch to <> diamond (10)
- assert-simplification — assertEquals(true,x) → assertTrue(x), assertTrue(x instanceof T) → assertInstanceOf, etc. (8)
- lambda-to-method-ref — collapse trivial lambdas (3)
- use-getFirst — list.get(0) → list.getFirst() (Java 21+ SequencedCollection) (1)
- javadoc-plain-text-link / dangling-javadoc — wrap bare URLs in <>, fix dangling refs (4)
- assert-same-called-on-itself — fix self-comparison (1)
- raw-type-use — parameterize previously raw types (1)
- redundant-suppression — delete stale @SuppressWarnings (replaced @SuppressWarnings on Result.Filtered SHARED field with a typed `Filtered<?>` declaration that no longer triggers the warning) (1)

## Files touched (25)

Spans api, consumer, core, format-avro, metrics, metrics-otel,
schema-registry-confluent libs, plus examples-demo and
examples-schema-registry. Each module-fix agent ran the module's
compileJava + compileTestJava after editing and only kept changes
that passed.

## What's deferred (352 findings)

The largest deferred buckets:
- unused-method (escape-hatch public surface per §13/§17 — Stream,
  MultiBuilder, Handle, KPipeConsumer.Builder methods documented in
  docs/escape-hatches.md but not invoked in-repo)
- unused-parameter (SAM-interface 